@@ -1,3 +1,3 @@
 #!/usr/bin/env bash
 
-java -ea -jar "$(git rev-parse --show-toplevel)/build/jar/Compiler.jar" "$@"
+java -ea --enable-preview -jar "$(git rev-parse --show-toplevel)/build/jar/Compiler.jar" "$@"
